更新特殊过滤器条件扩展点接口规范

--- a/VISSLM/接口文档/扩展枚举接口规范.md
+++ b/VISSLM/接口文档/扩展枚举接口规范.md
@@ -1,10 +1,34 @@
-#扩展枚举接口规范 0.9 
+#扩展枚举接口规范
 
+扩展枚举属于扩展点资源
 
-##根方法
+	type="ep/enum"
+
+##扩展枚举扩展点
 ----------
 
-直接访问枚举的根路径可以返回相关下层资源
+返回资源信息
+
+URI
+
+		http://<EXTERN-ENUM—EP-URI>/
+
+**方法:GET**
+
+返回值
+
+		[ 
+			{type:"enum", "name":"条件名","description":"","resource":"http:/<EXTERN-ENUM-URI>",key="ENUM_A"} ,
+			…
+	    ] 
+***
+
+
+
+##枚举资源根方法
+----------
+
+直接访问枚举资源的根路径可以返回相关下层资源
 
 URI
 
