修正Items接口说明 补充扩展型适配器参数定义说明

--- a/VISSLM/接口文档/扩展型适配器接口规范 1.0.md
+++ b/VISSLM/接口文档/扩展型适配器接口规范 1.0.md
@@ -75,5 +75,33 @@ URI
 			{"type":"menu/api","target-type","Requirement","name":"xxx","description":"","resource":"http:/<ADAPTER-URI>/api/test"}，
 			...
 		]
+
+	type: "menu/ui" 表示为弹出窗口(委托UI), "menu/api"表示为接口调用,无界面;
+	target-type: 目标数据类型或功能类型，比如 Requirement（需求数据类型）, [impact-analysis/apply]（影响分析应用功能菜单）
+	resource: 菜单对应的资源，menu/ui时为委托UI型返回，menu/api的返回格式如下：
+		{
+			"type":"OK|CANCEL|TRIGGER|SUCCESS|FAIL",
+			"data":{
+				"message": <type为FAIL时为错误提示消息>
+				"event": <type为TRIGGER时使用>
+			}
+		}
+		传递的参数:
+			projectId 项目ID
+			nodeIdList 对象ID列表
+			nodeType 对象类型
+			utoken 用户令牌
+		
+	status-resource:状态资源，可选，如果有这项显示菜单前会先调用该接口，以确定当前菜单项是否显示，或者使能，返回格式如下：
+		{
+			"type":"SUCCESS|FAIL",
+			"data":{
+						"enable":true,	
+						"display":true
+						"message": <type为FAIL时为错误提示消息>
+					}
+		}
+	size: 窗口大小， type为"menu/ui"时有效，决定弹出的委托窗口的(宽，高)
+
 ***
 
