--- a/VISSLM/接口文档/文件管理.md
+++ b/VISSLM/接口文档/文件管理.md
@@ -1,12 +1,12 @@
 #文件管理
-##一、通用模块
-###1、文件上传接口
-####场景说明：
+##通用模块
+##1、文件上传接口
+###场景说明：
 	支持上传单个文件，多个文件，单个文件夹，多个文件夹，单个超大文件，多个超大文件。(PS：该接口上传的文件均为临时文件，需要再调用临时转固定接口)
-####接口地址：
+###接口地址：
 	url：FileCenterImg/CommonUploadFile
 	请求方式：Post
-####参数输入：
+###参数输入：
 	files（HttpFileCollectionBase），必填，客户端上载的文件集合
 	module（int），非必填，模块id，0-数据管理（默认值），1-附件，2-对象字段
 	proId（string），非必填，项目id
@@ -24,7 +24,7 @@
     bigUpload（string），非必填，是否为超大文件上传，默认为false
     bigUploadEnd（string），非必填，是否超大文件上传结束，默认为false
     c_FileCode（string），非必填，唯一标识id，辅助更新文件的对象id
-####结果输出：
+###结果输出：
 	对象，具体Key，Value说明如下：
 	ErrorCode：0（成功）/-1（失败）
 	ErrorMsg：成功(0)/失败(-1)
@@ -37,38 +37,38 @@
 		* FileTree:[],--文件树，eg:["文件树json字符串"]
 		* N_BigFileCode:[],--文件夹内超大文件code，eg:["abc123"]
 		
-###2、文件上传临时转固定接口（非数据管理模块调用）
-####场景说明：
+##2、文件上传临时转固定接口（非数据管理模块调用）
+###场景说明：
 	将临时文件转为固定文件
-####接口地址：
+###接口地址：
 	url：DataManager/TempMutFixation
 	请求方式：Post
-####参数输入：
+###参数输入：
 	fileCode（string），必填，文件/文件夹code，多个用逗号分隔
-####结果输出：
+###结果输出：
 	bool，True-成功，False-失败
 
-###3、文件下载接口
-####场景说明：
+##3、文件下载接口
+###场景说明：
 	支持下载单个文件，多个文件，单个文件夹，多个文件夹，单个超大文件，多个超大文件。（PS：当批量下载文件或者下载文件夹时，下载结果为压缩包）
-####接口地址：
+###接口地址：
 	url：MainData/DownLoadAttachment
 	请求方式：Post
-####参数输入：
+###参数输入：
 	filePath（string），必填，文件/文件夹code，多个用逗号分隔
 	isNeedJudge（bool），非必填，是否验证为新文件模块，默认为true，filePath为纯code码时传递false
-####结果输出：
+###结果输出：
 	文件
 
-###4、获取文件属性接口
-####场景说明：
+##4、获取文件属性接口
+###场景说明：
 	支持获取文件/文件夹的名称、大小、创建时间、创建人、修改时间、修改人、密级、MD5校验码、下载次数、访问次数。（PS：返回的属性受系统配置->站点设置->文件管理->属性字段约束）
-####接口地址：
+###接口地址：
 	url：DataManager/GetFileDetailFields
 	请求方式：Post/Get
-####参数输入：
+###参数输入：
 	fileCode（string），必填，文件/文件code
-####结果输出：
+###结果输出：
 	对象，具体Key（中文）,Value说明如下：
 	名称:文件名称,
 	大小:文件大小,
@@ -81,183 +81,183 @@
 	下载次数:文件下载次数,
 	访问次数:文件访问次数
 
-###5、判断文件是否有效
-####场景说明：
+##5、判断文件是否有效
+###场景说明：
 	判断文件是否存在
-####接口地址：
+###接口地址：
 	url：DataManager/IsExistByFileCode
 	请求方式：Post/Get
-####参数输入：
+###参数输入：
 	fileCode（string），必填，文件code
-####结果输出：
+###结果输出：
 	对象，具体Key，Value说明如下：
 	ReturnMsg:success（有效）/failed（失效）
 	ErrorMsg:错误信息
 
-###6、单/批量设置文件/文件夹密级
-####场景说明：
+##6、单/批量设置文件/文件夹密级
+###场景说明：
 	单/批量设置文件/文件夹密级
-####接口地址：
+###接口地址：
 	url：DataManager/BatchSetFileSecretLevel
 	请求方式：Post/Get
-####参数输入：
+###参数输入：
 	fileCodes（string），必填，文件/文件夹code，多个逗号分隔
 	secretLevel（string），必填，秘密等级id
-####结果输出：
+###结果输出：
 	bool，True-成功，False-失败
 
-###7、是否为文件/文件夹的拥有者
-####场景说明：
+##7、是否为文件/文件夹的拥有者
+###场景说明：
 	判断当前用户是为文件的拥有者（创建者），用于做特殊权限判断
-####接口地址：
+###接口地址：
 	url：DataManager/IsFileOwner
 	请求方式：Post/Get
-####参数输入：
+###参数输入：
 	fileCode（string），必填，文件/文件夹code
-####结果输出：
+###结果输出：
 	bool，True-是，False-否
 
-###8、下载本地工具
-####场景说明
+##8、下载本地工具
+###场景说明
 	支持下载data/ClientTools目录下的指定文件
-####接口地址：
+###接口地址：
 	url：FileCenterImg/DownloadCommonlocalTool
 	请求方式：Post/Get
-####参数输入：
+###参数输入：
 	path（string），必填，相对于data/ClientTools的文件路径，eg：LUDTool.exe或者test\\test.txt
-####结果输出：
+###结果输出：
 	文件
 
 ##二、数据管理模块
-###1、获取项目文件目录
-####场景说明：
+##1、获取项目文件目录
+###场景说明：
 	获取当前项目的目录树
-####接口地址：
+###接口地址：
 	url：DataManager/GetProFileDirByCodeV3（默认两层）
 	请求方式：Post/Get
-####参数输入：	
+###参数输入：	
 	projectId（string），必填，项目Id
 	startDirName（string），非必填，起始目录名称，默认为空
 	needAccess（bool），非必填，是否判断权限，默认为false
-####结果输出：
+###结果输出：
 	树形集合
 	注: needAccess为true时返回对象：
 		* TreeList：List< UITreeModel >（List，树形集合）
 		* IsAccessTree：true/false（bool，是否有访问权限）
 
-###2、获取指定目录的子目录及子文件（列表，一层）
-####场景说明：
+##2、获取指定目录的子目录及子文件（列表，一层）
+###场景说明：
 	获取指定目录的子目录及子文件（列表，一层）
-####接口地址：
+###接口地址：
 	url：DataManager/GetFilesByDirCode
 	请求方式：Post/Get
-####参数输入：
+###参数输入：
     parentId（string），必填，父节点id
     parentCode（string），必填，指定目录code
-####结果输出：
+###结果输出：
 	gridMOdel
 
-###3、获取指定目录的子目录（一层）
-####场景说明：
+##3、获取指定目录的子目录（一层）
+###场景说明：
 	获取指定目录的子目录（一层）
-####接口地址：
+###接口地址：
 	url：DataManager/GetDirsByCode
 	请求方式：Post/Get
-####参数输入：
+###参数输入：
     fileCode（string），必填，指定目录code
-####结果输出：
+###结果输出：
 	树形集合
 
-###4、获取指定目录的子目录及子文件（树，一层）
-####场景说明：
+##4、获取指定目录的子目录及子文件（树，一层）
+###场景说明：
 	获取指定目录的子目录及子文件（树，一层）
-####接口地址：
+###接口地址：
 	url：DataManager/GetFileDirsByCode
 	请求方式：Post/Get
-####参数输入：
+###参数输入：
     fileCode（string），必填，指定目录code
-####结果输出：
+###结果输出：
 	树形集合
 
-###5、判断单/批量上传文件/文件夹在指定目录是否重名
-####场景说明：
+##5、判断单/批量上传文件/文件夹在指定目录是否重名
+###场景说明：
 	在上传文件/文件夹到指定目录前，先判断是否重名已经是否有权限，并返回默认处理值
-####接口地址：
+###接口地址：
 	url：DataManager/BatchUploadFileIsDuplication
 	请求方式：Post
-####参数输入：	
+###参数输入：	
 	fileNames（string），必填，文件/目录名称Json字符串数组
 	parentCode（string），必填，指定目录code
-####结果输出：
+###结果输出：
 	对象，具体Key，Value说明如下：
 	Result：failed/success（string，失败/成功）
 	ErrorMsg：错误信息（string，错误信息）
 	Data：[{“OldFileName”：”原文件名”，”NewFileName”：”默认新文件名”,"FileCode":"111","IsAccessFile":"true/false"}]（List，重名文件/目录信息,IsAccessFile为false时需提示无权限覆盖）
 		注： 返回的文件名称都已进行编码（uri.EscapeDataString）
  
-###6、文件上传临时转固定接口
-####场景说明：
+##6、文件上传临时转固定接口
+###场景说明：
 	将临时文件转为固定文件
-####接口地址：
+###接口地址：
 	url：DataManager/DealBatchUploadFile
 	请求方式：Post
-####参数输入：
+###参数输入：
 	fileCode（string），必填，文件/文件夹code，多个用逗号分隔
 	parentCode（string），必填，上传指定的目录code
-####结果输出：
+###结果输出：
 	bool，True-成功，False-失败
 
-###7、指定目录下新建文件夹
-####场景说明：
+##7、指定目录下新建文件夹
+###场景说明：
 	新建文件夹
-####接口地址：
+###接口地址：
 	url：DataManager/CreateNewFolderByCode
 	请求方式：Post/Get
-####参数输入：	
+###参数输入：	
 	parentCode（string），必填，指定目录code
 	fileBlock（string），非必填，文件区
 	proId（string），必填，项目id
-####结果返回：
+###结果返回：
 	树形集合
 
-###8、重命名目录（树节点使用）
-####场景说明：
+##8、重命名目录（树节点使用）
+###场景说明：
 	在目录树中重命名目录
-####接口地址：
+###接口地址：
 	url：DataManager/RenameNewFolderByCode
 	请求方式：Post/Get
-####参数输入：	
+###参数输入：	
 	fileCode（string），必填，目录code
 	newFolderName（string），必填，新目录名
 	oldFolderName（string），必填，旧目录名（用于追踪记录）
-####结果输出：
+###结果输出：
 	树形集合
 
-###9、重命名文件/目录（列表使用）
-####场景说明：
+##9、重命名文件/目录（列表使用）
+###场景说明：
 	在文件列表中重命名文件/目录
-####接口地址：
+###接口地址：
 	url：DataManager/RenameNewFileDirByCode
 	请求方式：Post/Get
-####参数输入：	
+###参数输入：	
 	fileCode（string），必填，文件/目录code
 	newFolderName（string），必填，新文件/目录名
 	oldFolderName（string），必填，旧目录名（用于追踪记录）
-####结果输出：
+###结果输出：
 	对象，具体Key，Value说明如下：
 	Result：false/true（string，失败/成功）
 	Duplication：false/true（string，无重名/重名）
 
-###10、判断移动文件/目录在指定目录是否重名
-####场景说明：
+##10、判断移动文件/目录在指定目录是否重名
+###场景说明：
 	判断移动文件/目录在指定目录是否重名，合理
-####接口地址：
+###接口地址：
 	url：DataManager/MoveFileDirIsDuplication
 	请求方式：Post
-####参数输入：	
+###参数输入：	
 	fileCode（string），必填，文件/目录code，，多个用逗号“,”分隔
 	parentCode（string），必填，指定目录code
-####结果输出：
+###结果输出：
 	对象集合，具体Key，Value说明如下：
 	FileCode：123，（string，文件/目录Code）
 	OldeFileName：test.txt，（string，文件/目录原名称）
@@ -266,32 +266,32 @@
     Directory：false/true（string，该目录正常/该目录重名）
 	NewFileName：test(2).txt（string，默认新文件/目录名，该Key只有在文件/目录重名时存在）
 
-###11、单/批量移动文件/目录
-####场景说明：
+##11、单/批量移动文件/目录
+###场景说明：
 	单/批量移动文件/目录
-####接口地址：
+###接口地址：
 	url：DataManager/MoveFileDir
 	请求方式：Post
-####参数输入：	
+###参数输入：	
 	files（string），必填，文件信息
 		* Json字符串，例如以下情况：
 		* [{“FileCode”：“123456”}]——文件/目录正常操作
 		* [{“FileCode”：“123456”，“IsCover”：”false”，“NewFileName”：“aaaaa”}]——文件/目录重命名操作
 		* [{“FileCode”：“12345”，“IsCover”：“true”，“OldFileName”：“aaaaa”}]——文件/目录覆盖操作
 	parentCode（string），指定目录code
-####结果输出：
+###结果输出：
 	bool，True-成功，False-失败
 
-###12、单/批量删除文件/目录
-####场景说明：
+##12、单/批量删除文件/目录
+###场景说明：
 	单批量删除文件/目录，有权限验证
-####接口地址：
+###接口地址：
 	url：DataManager/BatchDeleteCurrentFileByCode
 	请求方式：Post
-####参数输入：
+###参数输入：
 	fileCode（string），必填，文件/目录code，多个用逗号分隔
 	canDelete（bool），非必填，当无删除权限时，则会进一步判断是否为文件所有者，若是，则可继续删除
-####结果输出：
+###结果输出：
 	对象，具体Key，Value说明如下：
 	ReturnMsg:success（有效）/failed（失效）
 	ErrorMsg:错误信息
